--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,8 @@ workflows:
   build-and-deploy:
     jobs:
       - aws-ecr/build-and-push-image:
-          repo: "${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${AWS_RESOURCE_NAME_PREFIX}-ecr"
-          region: ${AWS_DEFAULT_REGION}
+          repo: REPO_URL
+          region: AWS_DEFAULT_REGION
           tag: "latest"
       - aws-ecs/deploy-service-update:
           requires:
