--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ workflows:
     jobs:
       - aws-ecr/build-and-push-image:
           repo: REPO_URL
-          region: AWS_DEFAULT_REGION
+          region: ${AWS_DEFAULT_REGION}
           tag: "latest"
       - aws-ecs/deploy-service-update:
           requires:
